--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run build && node server.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.1",
+    "express": "^4.19.2",
     "react": "^18.2.0",
+    "react-app-polyfill": "^3.0.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
@@ -32,6 +35,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-manifest": "^0.0.1"
   }
 }
